<resources>
    <string name="app_name">SAACP</string>
    <string name="forgot_password_email_sent">We will send you an verification link to change Password</string>
    <string name="password_changed">Email sent Successfully</string>
    <string name="create_account">Create Account</string>
    <string name="open"></string>
    <string name="close"></string>
    <string name="privact">Privacy Policy for SAACP</string>
    <string name="privacyText">At SAACP(Student Assistant Application for CSE PUST), one of our main priorities is the privacy of our visitors. This Privacy Policy document contains types of information that is collected and recorded by SAACP and how we use it.\n\nIf you have additional questions or require more information about our Privacy Policy, do not hesitate to contact us.</string>
    <string name="logPrivacy">SAACP follows a standard procedure of using log files. These files log visitors when they use app. The information collected by log files include internet protocol (IP) addresses, browser type, Internet Service Provider (ISP), date and time stamp, referring/exit pages, and possibly the number of clicks. These are not linked to any information that is personally identifiable. The purpose of the information is for analyzing trends, administering the app, tracking users\' movement on the app, and gathering demographic information.</string>
    <string name="policytext">You may consult this list to find the Privacy Policy for each of the advertising partners of SAACP. Third-party ad servers or ad networks uses technologies like cookies, JavaScript, or Beacons that are used in their respective advertisements and links that appear on SAACP. They automatically receive your IP address when this occurs. These technologies are used to measure the effectiveness of their advertising campaigns and/or to personalize the advertising content that you see on this app or other apps or websites. Note that SAACP has no access to or control over these cookies that are used by third-party advertisers.</string>
    <string name="thirdPartyPolicy">SAACP\'s Privacy Policy does not apply to other advertisers or websites. Thus, we are advising you to consult the respective Privacy Policies of these third-party ad servers for more detailed information. It may include their practices and instructions about how to opt-out of certain options.</string>
    <string name="childInfo">Another part of our priority is adding protection for children while using the internet. We encourage parents and guardians to observe, participate in, and/or monitor and guide their online activity. SAACP does not knowingly collect any Personal Identifiable Information from children under the age of 13. If you think that your child provided this kind of information on our App, we strongly encourage you to contact us immediately and we will do our best efforts to promptly remove such information from our records.</string>
    <string name="consent">By using our app, you hereby consent to our Privacy Policy and agree to its Terms and Conditions.</string>


    <string name="delete_confirmation">Confirmation</string>
    <string name="sureToDelete">Are you sure you want to delete the task</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirmation">Completed the task!..</string>
    <string name="sureToMarkAsComplete">Are you sure you want to mark this task as completed.</string>
    <string name="congrats_you_have_completed_the_task_successfully">Congrats!... You have completed the task successfully..</string>
</resources>